// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario three Create and return created person 1`] = `
Object {
  "age": 42,
  "hobbies": Array [
    "dancing",
    "hiking",
  ],
  "id": "a59ef8b2-a97d-4b17-b31d-2d56fe9d2320",
  "name": "Susan",
}
`;

exports[`Scenario three Delete person 1`] = `""`;

exports[`Scenario three Return 404 trying to delete deleted person 1`] = `
Object {
  "message": "Person not found",
}
`;

exports[`Scenario three Return 404 trying to update deleted person 1`] = `
Object {
  "message": "Person not found",
}
`;

exports[`Scenario three Return person list with 1 person 1`] = `
Array [
  Object {
    "age": 42,
    "hobbies": Array [
      "dancing",
      "hiking",
    ],
    "id": "a59ef8b2-a97d-4b17-b31d-2d56fe9d2320",
    "name": "Susan",
  },
]
`;

exports[`Scenario three Return person list with 1 persons 1`] = `
Array [
  Object {
    "age": 41,
    "hobbies": Array [
      "dancing",
      "hiking",
    ],
    "id": "b73a288b-7a09-4fa6-b988-2b14235e1e95",
    "name": "Susan",
  },
]
`;
